--- a/src/main/resources/templates/funding/funding-gift.html
+++ b/src/main/resources/templates/funding/funding-gift.html
@@ -160,6 +160,7 @@
                                                     <span>선물 없이 후원하기</span>
                                                 </div>
                                             </li>
+
                                             <li class="previewItem">
                                                 <button type="button" value="" class="previewItemButton">
                                                     <strong>1,000원+</strong>
@@ -187,12 +188,14 @@
                                                     </div>
                                                 </button>
                                             </li>
+
                                             <li class="previewItem">
                                                 <button type="button" value="" class="previewItemButton"><strong>1,000원+</strong>
                                                     <p>선물설명</p>
                                                     <ul>
                                                         <li>이게 상품이야 x 10</li>
-                                                    </ul><span>예상 전달일 : <em>2023년 7월 22일</em></span>
+                                                    </ul>
+                                                    <span>예상 전달일 : <em>2023년 7월 22일</em></span>
                                                     <div class="utilWrapper">
                                                         <em type="l4" color="#9e9e9e" class="countStyle backer">
                                                             <div name="check" class="iconSVG">
@@ -215,6 +218,7 @@
                                                     </div>
                                                 </button>
                                             </li>
+
                                         </ul>
                                     </div>
                                 </div>
@@ -292,7 +296,7 @@
                                             <div class="selectionWrap">
                                                 <div class="selectionOp" style="display:none">
                                                     <div class="multiOp" >
-                                                        <ul>
+                                                        <ul class="item-list">
                                                             <li>
                                                                 <label for="checkItem1" class="checkBoxWrapper">
                                                                     <input id="checkItem1" type="checkbox" value="" onclick="clickCheck()">
@@ -309,6 +313,7 @@
                                                                     <em>0 개의 선물에 포함됨</em>
                                                                     </label>
                                                                 </li>
+
                                                             <li>
                                                                 <label for="checkItem2" class="checkBoxWrapper">
                                                                     <input id="checkItem2" type="checkbox" value="" onclick="clickCheck()">
@@ -325,6 +330,7 @@
                                                                     <em>1 개의 선물에 포함됨</em>
                                                                 </label>
                                                             </li>
+
                                                             <li>
                                                                 <label for="checkItem3" class="checkBoxWrapper">
                                                                     
@@ -342,20 +348,25 @@
                                                                     <em>0 개의 선물에 포함됨</em>
                                                                 </label>
                                                             </li>
+
                                                         </ul>
                                                         <div class="footer">
                                                             <p><b>0</b>개의 아이템 선택</p>
-                                                            <button class="choiceButton pdc-btn-s" color="mainEditorP80"><span>
+                                                            <button class="choiceButton pdc-btn-s" color="mainEditorP80">
+                                                                <span>
                                                                     <p type="l4" class="gheuiw">선택완료</p>
-                                                                </span></button>
+                                                                </span>
+                                                            </button>
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
+
                                         <div type="p4" color="#e53c41"
                                             class="selectWithSigle msgStyle">
                                         </div>
+
                                         <ul class="selectItem">
                                             <li style="display: none;">
                                                 <section>
