--- a/src/main/resources/templates/main/header.html
+++ b/src/main/resources/templates/main/header.html
@@ -225,8 +225,8 @@
                             <a href="/funding/funding"><div class="category-wrapper">펀딩</div></a>
                             <a href="/community/free-board/new"><div class="category-wrapper">커뮤니티</div></a>
                             <a href="/calendar/calendar"><div class="category-wrapper">캘린더</div></a>
-                            <a href="welfare-center/welfare-center-search"><div class="category-wrapper">복지센터</div></a>
-                            <a href=""><div class="category-wrapper">심봉사소개</div></a>
+                            <a href="/welfare/center/welfare-center-search"><div class="category-wrapper">복지센터</div></a>
+                            <a href="/info/service-info/service-info"><div class="category-wrapper">심봉사소개</div></a>
                         </div>
 
                     </div>
