--- a/src/main/resources/templates/support/support-detail.html
+++ b/src/main/resources/templates/support/support-detail.html
@@ -7,6 +7,7 @@
     <title>후원 상세보기</title>
     <link rel="stylesheet" href="/css/font/font.css">
     <link rel="stylesheet" href="/css/support/support-detail.css">
+    <link rel="stylesheet" href="/css/mypage/paging.css">
     <link rel="stylesheet" href="/css/support/support-rice-modal.css">
     <link rel="stylesheet" href="/css/main/header.css">
     <link rel="stylesheet" href="/css/main/footer.css">
@@ -17,7 +18,7 @@
         font-weight: bold;
         font-style: normal;
         text-align: center;
-    }
+
 </style>
 <body class="full">
 <header th:insert="~{main/header.html :: mainHeader}"></header>
