--- a/src/main/resources/templates/mypage/user-modify.html
+++ b/src/main/resources/templates/mypage/user-modify.html
@@ -161,7 +161,7 @@
 
                 <!-- 이름 변경 버튼 눌렀을 때 -->
                 <div class="modify-content" style="display: none;">
-                    <form action="">
+                    <form th:action="@{/mypage/user-modify}" method="post">
                         <div class="modify-title-div">
                             <p class="modify-title">이름</p>
                             <button class="modify-button-cancel" type="button">취소</button>
@@ -169,13 +169,13 @@
                         <div>
                             <div class="modify-input-div">
                                 <span class="modify-input-span">
-                                    <input type="text" class="modify-input" placeholder="바꿀 이름을 입력하세요." maxlength="4">
+                                    <input name="memberName" type="text" class="modify-input" placeholder="바꿀 이름을 입력하세요." maxlength="4">
                                 </span>
                             </div>
                             <div class="error-message">비워놓을 수 없습니다.</div>
                         </div>
                         <div class="modify-submit-div">
-                            <button class="modify-submit">
+                            <button type="button" class="modify-submit">
                                 <span class="modify-submit-text">변경</span>
                             </button>
                         </div>
@@ -194,7 +194,7 @@
 
                 <!-- 주소 변경 버튼 눌렀을 때 -->
                 <div class="modify-content" style="display: none;">
-                    <form action="">
+                    <form th:action="@{/mypage/user-modify}" method="post">
                         <div class="modify-title-div">
                             <p class="modify-title">주소</p>
                             <button class="modify-button-cancel" type="button">취소</button>
@@ -202,7 +202,7 @@
                         <div>
                             <div class="modify-input-div">
                                 <span class="modify-input-span">
-                                    <input type="text" class="modify-input" id="address" placeholder="주소를 입력하세요." readonly>
+                                    <input name="memberAddress" type="text" class="modify-input" id="address" placeholder="주소를 입력하세요." readonly>
                                     <button class="find-address" type="button" onclick="sample6_execDaumPostcode()">검색</button>
                                 </span>
                             </div>
@@ -228,7 +228,7 @@
 
                 <!-- 나이 변경 버튼 눌렀을 때 -->
                 <div class="modify-content" style="display: none;">
-                    <form action="">
+                    <form th:action="@{/mypage/user-modify}" method="post">
                         <div class="modify-title-div">
                             <p class="modify-title">나이</p>
                             <button class="modify-button-cancel" type="button">취소</button>
@@ -236,7 +236,7 @@
                         <div>
                             <div class="modify-input-div">
                                 <span class="modify-input-span">
-                                    <input type="text" class="modify-input" placeholder="바꿀 나이를 입력하세요." maxlength="2">
+                                    <input name="memberAge" type="text" class="modify-input" placeholder="바꿀 나이를 입력하세요." maxlength="2">
                                 </span>
                             </div>
                             <div class="error-message">비워놓을 수 없습니다.</div>
@@ -260,7 +260,7 @@
 
                 <!-- 관심봉사활동 변경 버튼 눌렀을 때 -->
                 <div class="modify-content" style="display: none;">
-                    <form action="">
+                    <form th:action="@{/mypage/user-modify}" method="post">
                         <div class="modify-title-div">
                             <p class="modify-title">관심봉사활동</p>
                             <button class="modify-button-cancel" type="button">취소</button>
@@ -269,7 +269,7 @@
                             <div class="modify-input-div">
                                 <label for="drop-span">
                                     <span id="drop-span" class="modify-input-span" style="cursor: pointer;">
-                                        <input type="text" id="interest-volunteer" class="modify-input" placeholder="관심봉사활동을 선택해주세요." readonly>
+                                        <input name="memberInterest" type="text" id="interest-volunteer" class="modify-input" placeholder="관심봉사활동을 선택해주세요." readonly>
                                         <div>
                                             <svg height="20" width="20" style="padding-top: 8px;" viewBox="0 0 20 20" aria-hidden="true" focusable="false" class="css-8mmkcg">
                                                 <path d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"></path>
@@ -309,6 +309,18 @@
 
             </div>
         </div>
+
+        <div class="modal-wrap">
+            <div class="modal-container">
+                <div class="modal">
+                    <div class="modal-content">성공적으로 변경하였습니다.</div>
+                    <div class="modal-ok-div">
+                        <button type="button" class="modal-ok">확인</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
 
         <!-- 푸터 임시 -->
