--- a/src/main/resources/templates/support/support-list.html
+++ b/src/main/resources/templates/support/support-list.html
@@ -17,14 +17,14 @@
     <div class="full-screen">
         <header th:insert="~{main/header.html :: mainHeader}"></header>
     </div>
-    
+
     <!-- 전체 div -->
     <div class="main">
         <!-- 배너 -->
         <!-- <div class="board-benner">
             <div class="benner-cover"></div>
         </div> -->
-        
+
         <!-- 중간 메인 -->
         <div>
             <div class="main-container">
@@ -34,7 +34,7 @@
                     </div>
                 </section> -->
                 <div>
-                    
+
                 </div>
                 <section class="service-info">
                     <div class="items-info-layout">
@@ -136,4 +136,5 @@
     // });
 </script>
 <script src="/js/support/support-list.js"></script>
+<script src="/js/customerCenter/inquiry-write.js"></script>
 </html>
