--- a/src/main/resources/templates/support/support-success.html
+++ b/src/main/resources/templates/support/support-success.html
@@ -11,11 +11,13 @@
     <link rel="stylesheet" href="/css/funding/funding-result.css">
     <link rel="stylesheet" href="/css/main/header.css">
     <link rel="stylesheet" href="/css/main/footer.css">
+    <link rel="stylesheet" href="/css/customerCenter/inquiry-write.css">
 </head>
 
 <body>
     <div id="react-view" class="view">
         <div class="header">
+            <div th:insert="~{customerCenter/inquiry-write.html :: inqueryModal}"></div>
             <div class="componentContain logoHeader">
                 <a href="/">
                     <div class="logo logoStyle">
@@ -96,6 +98,7 @@
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script src="/js/customerCenter/inquiry-write.js"></script>
 <!--<script>-->
 <!--    $(document).ready(function () {-->
 <!--        $("#_header").load("../main/header.html");-->
