서현 파비콘 작업중

--- a/src/main/resources/templates/admin/activity-review-board.html
+++ b/src/main/resources/templates/admin/activity-review-board.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="/css/admin/paging.css">
     <link rel="stylesheet" href="/css/admin/activity-review-modal.css"/>
     <link rel="stylesheet" href="/css/admin/storage-modal.css"/>
+    <link rel="shortcut icon" href="/image/pavicon.png">
 </head>
 <body>
 <section class="main">
