--- a/src/main/resources/templates/admin/component/sidebar.html
+++ b/src/main/resources/templates/admin/component/sidebar.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/css/admin/default.css" />
   <link rel="stylesheet" href="/css/admin/sidebar.css" />
+  <link rel="shortcut icon" href="/image/pavicon.png">
+
   <title></title>
 </head>
 
