--- a/src/main/resources/templates/admin/user.html
+++ b/src/main/resources/templates/admin/user.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="/css/admin/status.css"/>
     <link rel="stylesheet" href="/css/admin/user-modal.css"/>
     <link rel="stylesheet" href="/css/admin/paging.css">
+    <link rel="shortcut icon" href="/image/pavicon.png">
 </head>
 
 <body>
