--- a/src/main/resources/templates/admin/volunteer.html
+++ b/src/main/resources/templates/admin/volunteer.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="/css/admin/paging.css">
     <link rel="stylesheet" href="/css/admin/inquiry-modal.css">
     <link rel="stylesheet" href="/css/admin/volunteer.css">
-
+    <link rel="shortcut icon" href="/image/pavicon.png">
     <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.css" rel="stylesheet"/>
 </head>
 <style>
