--- a/src/main/resources/templates/calendar/calendar copy.html
+++ b/src/main/resources/templates/calendar/calendar copy.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/static/css/calendar/common.css">
     <link rel="stylesheet" href="/static/css/calendar/global.css">
     <link rel="stylesheet" href="/static/css/calendar/calendar-response.css">
+    <link rel="shortcut icon" href="/image/pavicon.png">
     <link href="//db.onlinewebfonts.com/c/1c45e28f8e86cc89876f003b953cc3e9?family=SF+Pro+Text" rel="stylesheet" type="text/css"/>
     <title>심봉사 캘린더</title>
 </head>
