--- a/src/main/resources/templates/community/review-board.html
+++ b/src/main/resources/templates/community/review-board.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/main/header.css">
     <link rel="stylesheet" href="/css/community/review-board.css">
     <link rel="stylesheet" href="/css/community/free-board.css">
+    <link rel="shortcut icon" href="/image/pavicon.png">
 </head>
 <body class="body">
     <!-- 헤더 -->
