--- a/src/main/resources/templates/customerCenter/faq-detail.html
+++ b/src/main/resources/templates/customerCenter/faq-detail.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/css/main/footer.css">
     <link rel="stylesheet" href="/css/customerCenter/faq-detail.css">
     <link rel="stylesheet" href="/css/customerCenter/faq-detail-response.css">
-
+    <link rel="shortcut icon" href="/image/pavicon.png">
 </head>
 <body>
 
