--- a/src/main/resources/templates/customerCenter/header.html
+++ b/src/main/resources/templates/customerCenter/header.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>텀블벅 헬프센터</title>
     <link rel="stylesheet" href="/css/customerCenter/header.css">
+    <link rel="shortcut icon" href="/image/pavicon.png">
 </head>
 <body>
     <div class="header-wrapper">
