--- a/src/main/resources/templates/customerCenter/search.html
+++ b/src/main/resources/templates/customerCenter/search.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/css/customerCenter/notice.css">
     <link rel="stylesheet" href="/css/font/font.css">
     <link rel="stylesheet" href="/css/customerCenter/search.css">
+    <link rel="shortcut icon" href="/image/pavicon.png">
 </head>
 <body>
     <!-- 헤더  -->
