--- a/src/main/resources/templates/error/unReady.html
+++ b/src/main/resources/templates/error/unReady.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/font/font.css">
     <link rel="stylesheet" href="/css/error/error.css" />
     <link rel="stylesheet" href="/main/resources/static/css/error/error.css">
+    <link rel="shortcut icon" href="/image/pavicon.png">
 </head>
 <body>
     <div class="full-screen">
