--- a/src/main/resources/templates/funding/funding-creater-info.html
+++ b/src/main/resources/templates/funding/funding-creater-info.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/css/funding/funding-topContent-response.css">
     <link rel="stylesheet" href="/css/funding/funding.css">
     <link rel="stylesheet" href="/css/funding/response.css">
+    <link rel="shortcut icon" href="/image/pavicon.png">
 </head>
 <style>
 .createrInfo::after {
