--- a/src/main/resources/templates/funding/funding-detail.html
+++ b/src/main/resources/templates/funding/funding-detail.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/css/font/font.css">
     <link rel="stylesheet" href="/css/funding/funding-detail.css">
     <link rel="stylesheet" href="/css/support/support-detail.css">
-
+    <link rel="shortcut icon" href="/image/pavicon.png">
     <link rel="stylesheet" href="/css/main/header.css">
     <link rel="stylesheet" href="/css/main/footer.css">
    
