--- a/src/main/resources/templates/funding/funding-gift.html
+++ b/src/main/resources/templates/funding/funding-gift.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/css/funding/funding-topContent-response.css">
     <link rel="stylesheet" href="/css/funding/funding-item.css">
     <link rel="stylesheet" href="/css/funding/funding-item-response.css">
-    
+    <link rel="shortcut icon" href="/image/pavicon.png">
 </head>
 <style>
     .fundingGift::after {
