--- a/src/main/resources/templates/funding/funding-header.html
+++ b/src/main/resources/templates/funding/funding-header.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/funding/funding-header.css">
     <link rel="stylesheet" href="/css/funding/funding-header-response.css">
     <link rel="stylesheet" href="/css/font/font.css">
+    <link rel="shortcut icon" href="/image/pavicon.png">
 </head>
 <body>
     <div class="funding-header" th:fragment="fundingHeader">
