--- a/src/main/resources/templates/funding/funding-initial-info.html
+++ b/src/main/resources/templates/funding/funding-initial-info.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/css/funding/funding-initial-info.css">
     <link rel="stylesheet" href="/css/funding/funding-initial-response.css">
     <link rel="stylesheet" href="/css/funding/funding.css">
-
+    <link rel="shortcut icon" href="/image/pavicon.png">
 </head>
 <style>
 .initialInfo::after {
