--- a/src/main/resources/templates/funding/funding-item.html
+++ b/src/main/resources/templates/funding/funding-item.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/css/funding/funding-topContent-response.css">
     <link rel="stylesheet" href="/css/funding/funding-gift.css">
     <link rel="stylesheet" href="/css/funding/funding-gift-response.css">
+    <link rel="shortcut icon" href="/image/pavicon.png">
 </head>
 <style>
     .fundingGift::after {
