--- a/src/main/resources/templates/funding/funding-plan-header.html
+++ b/src/main/resources/templates/funding/funding-plan-header.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/font/font.css">
     <link rel="stylesheet" href="/css/funding/funding-header.css">
     <link rel="stylesheet" href="/css/funding/funding-header-response.css">
+    <link rel="shortcut icon" href="/image/pavicon.png">
 </head>
 <body>
                   <!-- funding-header -->
