--- a/src/main/resources/templates/funding/funding-plan-main.html
+++ b/src/main/resources/templates/funding/funding-plan-main.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/css/funding/funding-main-response.css">
     <link rel="stylesheet" href="/css/funding/funding-header.css">
     <link rel="stylesheet" href="/css/funding/funding-header-response.css">
+    <link rel="shortcut icon" href="/image/pavicon.png">
 </head>
 
 <body>
