--- a/src/main/resources/templates/join-login/find-password-email-send.html
+++ b/src/main/resources/templates/join-login/find-password-email-send.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/main/footer.css">
     <link rel="stylesheet" href="/css/join-login/find-password-email-send.css">
     <link rel="stylesheet" href="/css/font/font.css">
+    <link rel="shortcut icon" href="/image/pavicon.png">
 </head>
 <body class style="padding-right: 0px;">
 <div class="sendmailMain">
