--- a/src/main/resources/templates/mypage/my-question.html
+++ b/src/main/resources/templates/mypage/my-question.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/css/mypage/my-question.css">
     <link rel="stylesheet" href="/css/mypage/paging.css">
     <link rel="stylesheet" href="/css/main/footer.css">
+    <link rel="shortcut icon" href="/image/pavicon.png">
 </head>
 <body>
     <div class="full-screen">
