--- a/src/main/resources/templates/mypage/rice-charge.html
+++ b/src/main/resources/templates/mypage/rice-charge.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/css/mypage/mypage-header.css">
     <link rel="stylesheet" href="/css/mypage/rice-charge.css">
     <link rel="stylesheet" href="/css/main/footer.css">
+    <link rel="shortcut icon" href="/image/pavicon.png">
 </head>
 <body>
     <div class="full-screen">
