--- a/src/main/resources/templates/mypage/rice-list.html
+++ b/src/main/resources/templates/mypage/rice-list.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/css/mypage/mypage-header.css">
     <link rel="stylesheet" href="/css/mypage/rice-list.css">
     <link rel="stylesheet" href="/css/main/footer.css">
+    <link rel="shortcut icon" href="/image/pavicon.png">
 </head>
 <body>
     <div class="full-screen">
