--- a/src/main/resources/templates/mypage/withdraw-login.html
+++ b/src/main/resources/templates/mypage/withdraw-login.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/main/header.css">
     <link rel="stylesheet" href="/css/mypage/withdraw-login.css">
     <link rel="stylesheet" href="/css/main/footer.css">
+    <link rel="shortcut icon" href="/image/pavicon.png">
 </head>
 <body>
     <div class="full-screen">
