--- a/src/main/resources/templates/admin/payment.html
+++ b/src/main/resources/templates/admin/payment.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="/css/admin/status.css"/>
     <link rel="stylesheet" href="/css/admin/payment-modal.css"/>
     <link rel="stylesheet" href="/css/admin/paging.css">
+    <link rel="shortcut icon" href="/image/pavicon.png">
 </head>
 <body>
 <section class="main">
