--- a/src/main/resources/templates/admin/review.html
+++ b/src/main/resources/templates/admin/review.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="/css/admin/status.css" />
     <link rel="stylesheet" href="/css/admin/storage-modal.css" />
     <link rel="stylesheet" href="/css/admin/paging.css">
+    <link rel="shortcut icon" href="/image/pavicon.png">
   </head>
   <body>
     <section class="main">
