--- a/src/main/resources/templates/admin/sponsorship-request.html
+++ b/src/main/resources/templates/admin/sponsorship-request.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="/css/admin/sponsorship-request-modal.css"/>
     <link rel="stylesheet" href="/css/admin/paging.css">
     <link rel="stylesheet" href="/css/admin/storage-modal.css">
+    <link rel="shortcut icon" href="/image/pavicon.png">
     <!-- 웹에디터 API -->
     <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.css" rel="stylesheet"/>
 </head>
