--- a/src/main/resources/templates/community/free-create.html
+++ b/src/main/resources/templates/community/free-create.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/css/main/footer.css">
     <link rel="stylesheet" href="/js/community/free-create.js">
     <link rel="stylesheet" href="/css/font/font.css">
+    <link rel="shortcut icon" href="/image/pavicon.png">
 </head>
 <body>
     <!-- 헤더 -->
