--- a/src/main/resources/templates/community/review-detail.html
+++ b/src/main/resources/templates/community/review-detail.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/font/font.css">
     <link rel="stylesheet" href="/css/main/header.css">
     <link rel="stylesheet" href="/css/community/free-detail.css">
+    <link rel="shortcut icon" href="/image/pavicon.png">
 </head>
 <body>
     <!-- 헤더 -->
