--- a/src/main/resources/templates/customerCenter/notice-detail.html
+++ b/src/main/resources/templates/customerCenter/notice-detail.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/css/customerCenter/notice-detail.css">
     <link rel="stylesheet" href="/css/customerCenter/notice.css">
     <link rel="stylesheet" href="/css/customerCenter/notice-detail-response.css">
-    
+    <link rel="shortcut icon" href="/image/pavicon.png">
 </head>
 <body>
     <div>
