--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404</title>
     <link rel="stylesheet" href="/css/font/font.css">
-    <link rel="stylesheet" href="/css/error/error.css" />
-</head>
+    <link rel="stylesheet" href="/css/error/error.css"/>
+    <link rel="shortcut icon" href="/image/pavicon.png"></head>
 <body>
     <div class="full-screen">
         <div class="not-found-page">
