--- a/src/main/resources/templates/funding/funding-list.html
+++ b/src/main/resources/templates/funding/funding-list.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/css/funding/funding-list-response.css">
     <link rel="stylesheet" href="/css/main/header.css">
     <link rel="stylesheet" href="/css/main/footer.css">
+    <link rel="shortcut icon" href="/image/pavicon.png">
 </head>
 
 <body>
