--- a/src/main/resources/templates/funding/funding-payment.html
+++ b/src/main/resources/templates/funding/funding-payment.html
@@ -8,6 +8,7 @@
     <title>프로젝트 후원하기</title>
     <link rel="stylesheet" href="/css/font/font.css">
     <link rel="stylesheet" href="/css/funding/funding-support.css">
+    <link rel="shortcut icon" href="/image/pavicon.png">
 </head>
 
 <body>
