--- a/src/main/resources/templates/funding/funding-project-plan.html
+++ b/src/main/resources/templates/funding/funding-project-plan.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/css/funding/funding-topContent-response.css">
     <link rel="stylesheet" href="/css/funding/funding.css">
     <link rel="stylesheet" href="/css/funding/response.css">
+    <link rel="shortcut icon" href="/image/pavicon.png">
     <!-- 웹에디터 API -->
     <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.css" rel="stylesheet" />
 </head>
