--- a/src/main/resources/templates/join-login/find-password.html
+++ b/src/main/resources/templates/join-login/find-password.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>비밀번호 찾기</title>
     <link rel="stylesheet" href="/css/join-login/password-page.css">
+    <link rel="shortcut icon" href="/image/pavicon.png">
 </head>
 <body>
     <div class="all-wrap">
