--- a/src/main/resources/templates/join-login/login-select.html
+++ b/src/main/resources/templates/join-login/login-select.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>로그인 페이지</title>
     <link rel="stylesheet" href="/css/join-login/select-page.css">
+    <link rel="shortcut icon" href="/image/pavicon.png">
 </head>
 <body>
     <div class="wrap">
