--- a/src/main/resources/templates/main/footer.html
+++ b/src/main/resources/templates/main/footer.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="/css/font/font.css">
     <link rel="stylesheet" href="/css/main/footer.css">
+    <link rel="shortcut icon" href="/image/pavicon.png">
 </head>
 <body>
     <div class="full-screen">
