--- a/src/main/resources/templates/mypage/mypage-header.html
+++ b/src/main/resources/templates/mypage/mypage-header.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/css/mypage/mypage-header.css">
+    <link rel="shortcut icon" href="/image/pavicon.png">
 </head>
 <body>
     <div class="mypage-header-wrap">
