--- a/src/main/resources/templates/volunteer-work/work-apply-modal.html
+++ b/src/main/resources/templates/volunteer-work/work-apply-modal.html
@@ -8,7 +8,7 @@
     <title>봉사 신청하기</title>
     <link rel="stylesheet" href="/css/volunteer-work/work-apply.css">
     <link rel="stylesheet" href="/css/font/font.css">
-
+    <link rel="shortcut icon" href="/image/pavicon.png">
 </head>
 <body>
     <button id="work-open">봉사 신청하기</button>
