--- a/src/main/resources/templates/volunteer-work/work-detail.html
+++ b/src/main/resources/templates/volunteer-work/work-detail.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/css/volunteer-work/work-detail.css">
     <link rel="stylesheet" href="/css/volunteer-work/work-apply.css">
     <link rel="stylesheet" href="/css/customerCenter/inquiry-write.css">
+    <link rel="shortcut icon" href="/image/pavicon.png">
 </head>
 <body>
     
