--- a/src/main/resources/templates/volunteer-work/work-list.html
+++ b/src/main/resources/templates/volunteer-work/work-list.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/css/main/footer.css">
     <link rel="stylesheet" href="/css/mypage/paging.css">
     <link rel="stylesheet" href="/css/customerCenter/inquiry-write.css">
+    <link rel="shortcut icon" href="/image/pavicon.png">
 </head>
 <body>
 
