--- a/src/main/resources/templates/welfare-center/welfare-center-search.html
+++ b/src/main/resources/templates/welfare-center/welfare-center-search.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/css/main/header.css">
     <link rel="stylesheet" href="/css/main/footer.css">
     <link rel="stylesheet" href="/css/customerCenter/inquiry-write.css">
+    <link rel="shortcut icon" href="/image/pavicon.png">
 </head>
 <body>
     <header th:insert="~{main/header.html :: mainHeader}"></header>
