--- a/src/main/resources/templates/support/support-rice-result.html
+++ b/src/main/resources/templates/support/support-rice-result.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/support/support-rice-modal.css">
     <link rel="stylesheet" href="/css/main/header.css">
     <link rel="stylesheet" href="/css/main/footer.css">
+    <link rel="shortcut icon" href="/image/pavicon.png">
 </head>
 <body>
     <button id="support-open" >후원하기</button>
