--- a/src/main/resources/templates/volunteer-work/work-search2.html
+++ b/src/main/resources/templates/volunteer-work/work-search2.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/font/font.css">
     <link rel="stylesheet" href="/css/main/header.css">
     <link rel="stylesheet" href="/css/main/footer.css">
+    <link rel="shortcut icon" href="/image/pavicon.png">
 </head>
 <body>
     <!-- 헤더 -->
