후원 상세페이지  완료

--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -373,7 +373,7 @@
             <div class="volunteer-link-wrapper">
              <div class="volunteer-image-wrapper volunteerImg">
              <a href="#">
-                <img class="fundingImg" src="/file/display?fileName=${volunteer.fileDTO.filePath}/${volunteer.fileDTO.fileUuid}_${volunteer.fileDTO.fileName}">
+                <img class="fundingImg" src="/file/display?fileName=${volunteer.fileDTO.filePath}">
             </a>
             </div>
             <div class="info-wrapper" >
