--- a/src/main/resources/templates/main/header.html
+++ b/src/main/resources/templates/main/header.html
@@ -224,9 +224,9 @@
                             <a href="/main"><div class="category-wrapper category-select">홈</div></a>
                             <a href="/support/support-list"><div class="category-wrapper">후원</div></a>
                             <a href="/funding/funding"><div class="category-wrapper">펀딩</div></a>
+                            <a href="/volunteer-work/work-list"><div class="category-wrapper">봉사</div></a>
                             <a href="/community/free-board/new"><div class="category-wrapper">커뮤니티</div></a>
-                            <a href="/calendar/calendar"><div class="category-wrapper">캘린더</div></a>
-                            <a href="/welfare/center/welfare-center-search"><div class="category-wrapper">복지센터</div></a>
+                            <a href="/welfare/center"><div class="category-wrapper">복지센터</div></a>
                             <a href="/info/service-info/service-info"><div class="category-wrapper">심봉사소개</div></a>
                         </div>
 
@@ -241,7 +241,7 @@
                             <div class="style-depth-category-wrapper">
                                 <div class="depth-category-group">
 
-                                    <a th:href="@{/volunteer-work/work-list/{volunteerWorkType}(volunteerWorkType='전체')}">
+                                    <a th:href="@{/volunteer-work/work-list-category/{volunteerWorkType}(volunteerWorkType='전체')}">
                                         <div class="depth-category">
                                             <div class="depth-category-icon">
                                                 <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
@@ -249,14 +249,14 @@
                                             <div class="depth-category-text">전체</div>
                                         </div>
                                     </a>
-                                    <a th:href="@{/volunteer-work/work-list/{volunteerWorkType}(volunteerWorkType='시설봉사')}">
+                                    <a th:href="@{/volunteer-work/work-list-category/{volunteerWorkType}(volunteerWorkType='시설봉사')}">
                                         <div class="depth-category">
                                         <div class="depth-category-icon">
                                             <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
                                         </div>
                                         <div class="depth-category-text">시설봉사</div>
                                     </div></a>
-                                    <a th:href="@{/volunteer-work/work-list/{volunteerWorkType}(volunteerWorkType='재가봉사')}">
+                                    <a th:href="@{/volunteer-work/work-list-category/{volunteerWorkType}(volunteerWorkType='재가봉사')}">
                                         <div class="depth-category">
                                         <div class="depth-category-icon">
                                             <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
@@ -266,7 +266,7 @@
                                 </div>
 
                                 <div class="depth-category-group">
-                                    <a th:href="@{/volunteer-work/work-list/{volunteerWorkType}(volunteerWorkType='전문봉사')}">
+                                    <a th:href="@{/volunteer-work/work-list-category/{volunteerWorkType}(volunteerWorkType='전문봉사')}">
                                         <div class="depth-category">
                                             <div class="depth-category-icon">
                                                 <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
@@ -274,15 +274,15 @@
                                             <div class="depth-category-text">전문봉사</div>
                                         </div>
                                     </a>
-                                    <a th:href="@{/volunteer-work/work-list/{volunteerWorkType}(volunteerWorkType='지역사회봉사')}">
+                                    <a th:href="@{/volunteer-work/work-list-category/{volunteerWorkType}(volunteerWorkType='지역사회봉사')}">
                                         <div class="depth-category">
                                             <div class="depth-category-icon">
                                                 <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
                                             </div>
-                                            <div class="depth-category-text">지역사회사봉사</div>
+                                            <div class="depth-category-text">지역사회봉사</div>
                                         </div>
                                     </a>
-                                    <a th:href="@{/volunteer-work/work-list/{volunteerWorkType}(volunteerWorkType='금물품봉사')}">
+                                    <a th:href="@{/volunteer-work/work-list-category/{volunteerWorkType}(volunteerWorkType='금물품봉사')}">
                                         <div class="depth-category">
                                             <div class="depth-category-icon">
                                                 <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
@@ -293,7 +293,7 @@
                                 </div>
 
                                 <div class="depth-category-group">
-                                    <a th:href="@{/volunteer-work/work-list/{volunteerWorkType}(volunteerWorkType='해외봉사')}">
+                                    <a th:href="@{/volunteer-work/work-list-category/{volunteerWorkType}(volunteerWorkType='해외봉사')}">
                                         <div class="depth-category">
                                             <div class="depth-category-icon">
                                                 <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
@@ -302,7 +302,7 @@
                                         </div>
                                     </a>
 
-                                    <a th:href="@{/volunteer-work/work-list/{volunteerWorkType}(volunteerWorkType='헌혈')}">
+                                    <a th:href="@{/volunteer-work/work-list-category/{volunteerWorkType}(volunteerWorkType='헌혈')}">
                                         <div class="depth-category">
                                             <div class="depth-category-icon">
                                                 <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
@@ -311,7 +311,7 @@
                                         </div>
                                     </a>
 
-                                    <a th:href="@{/volunteer-work/work-list/{volunteerWorkType}(volunteerWorkType='재능기부봉사')}">
+                                    <a th:href="@{/volunteer-work/work-list-category/{volunteerWorkType}(volunteerWorkType='재능기부봉사')}">
                                         <div class="depth-category">
                                             <div class="depth-category-icon">
                                                 <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 9.6H9.6V16.4H16.4V9.6ZM8 8V18H18V8H8Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28.4 9.6H21.6V16.4H28.4V9.6ZM20 8V18H30V8H20Z" fill="#0D0D0D"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.4 21.6H9.6V28.4H16.4V21.6ZM8 20V30H18V20H8Z" fill="#0D0D0D"></path><path d="M20 20H30V30H20V20Z" fill="#FF5757"></path></svg>
