--- a/src/main/resources/templates/main/header.html
+++ b/src/main/resources/templates/main/header.html
@@ -176,7 +176,7 @@
                                 </svg>
                             </div>
                         </div>
-                        <div class="header-button">펀딩하기</div>
+                        <a href="/ready/"><div class="header-button">펀딩하기</div></a>
                         <a href="/support/support-write"><div class="header-button">후원하기</div></a>
                         <div class="login-user-button-wrapper">
                             <div class="user-button-layout">
@@ -223,7 +223,7 @@
                             </div>
                             <a href="/main"><div class="category-wrapper category-select">홈</div></a>
                             <a href="/support/support-list"><div class="category-wrapper">후원</div></a>
-                            <a href="/funding/funding"><div class="category-wrapper">펀딩</div></a>
+                            <a href="/ready/"><div class="category-wrapper">펀딩</div></a>
                             <a href="/volunteer-work/work-list"><div class="category-wrapper">봉사</div></a>
                             <a href="/community/free-board/new"><div class="category-wrapper">커뮤니티</div></a>
                             <a href="/welfare/center"><div class="category-wrapper">복지센터</div></a>
