--- a/src/main/resources/templates/volunteer-work/work-detail.html
+++ b/src/main/resources/templates/volunteer-work/work-detail.html
@@ -513,7 +513,9 @@
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script src="/js/main/header.js"></script>
-<script th:inline="javascript"></script>
+<script th:inline="javascript">
+
+</script>
 <script src="/js/volunteer-work/work-apply-modal.js"></script>
 <script >
     function clickButton(){
